# GEM_OPT

./: README.md
Drift/: CMakeLists.txt  CollCalc.py  Drift.C  collection.txt
GemWithRim/: CMakeLists.txt  GainDependence.py  GemWithRim.C  dVGain.txt  rGain.txt
Map/: CMakeLists.txt  FinalCalc.py  GenerateEvent.py  Map.C  ReadMap.py  ThirdLayerNumber.py  qCMOSMap.py  scint_positions.txt
ParallelPlate/: CMakeLists.txt  ParallelPlate.C  TownsendCalc.py  rBotRelation.py  rBotRelation.txt
ParallelPlate/gas/: CMakeLists.txt  GasFile.C  cf4_100.gas
Photon/: CMakeLists.txt  PhotoGain.py  PhotoGain.txt  Photon.C
Stack/: CMakeLists.txt  ExitCalc.py  GainCalc.py  Ne_r.txt  Stack.C  rdist_triple_LH_corrected.txt  rzdist_triple_LH_corrected.txt
field/: CMakeLists.txt  DrawField.py  Field.C
